--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,14 @@
   }
 
   .dark {
-    --background: 240 10%, 4%;
+    --background: 0 0% 9%;
     --foreground: 60 9.1% 97.8%;
-    --card: 20 14.3% 4.1%;
+    --card: 0 0% 15%;
     --card-foreground: 60 9.1% 97.8%;
-    --popover: 20 14.3% 4.1%;
+    --popover: 0 0% 15%;
     --popover-foreground: 60 9.1% 97.8%;
     --primary: 217.2 91.2% 59.8%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary-foreground: 215 100% 67%;
     --secondary: 12 6.5% 15.1%;
     --secondary-foreground: 60 9.1% 97.8%;
     --muted: 12 6.5% 15.1%;
@@ -43,12 +43,14 @@
     --accent-foreground: 60 9.1% 97.8%;
     --destructive: 0 100% 57.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 12 6.5% 15.1%;
+    --border: 300 1% 22%;
     --input: 12 6.5% 15.1%;
     --ring: 24 5.7% 82.9%;
   }
 }
 
-* {
-  box-sizing: border-box;
+@layer components {
+  * {
+    @apply font-sans box-border scrollbar-thin scrollbar-thumb-[#7b7b7b] scrollbar-track-[#424242];
+  }
 }
