refactor: Update TiptapEditor import and add placeholder functionality

--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,11 @@
     @apply font-sans box-border scrollbar-thin scrollbar-thumb-[#7b7b7b] scrollbar-track-[#424242];
   }
 }
+
+.tiptap .is-empty::before {
+  @apply text-slate-300;
+  @apply content-[attr(data-placeholder)];
+  @apply float-left;
+  @apply pointer-events-none;
+  @apply h-0;
+}
