--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,18 @@
   @apply pointer-events-none;
   @apply h-0;
 }
+
+.ql-toolbar {
+  @apply dark:bg-[#999] bg-[#ccc] border-border;
+}
+
+.ql-snow {
+  @apply border-border;
+}
+
+.ql-editor {
+  @apply border-border border-[1px] min-h-[10rem];
+}
+/* .ql-snow {
+  @apply bg-black;
+} */
